--- a/beachfront/templates/download_scene.jinja2
+++ b/beachfront/templates/download_scene.jinja2
@@ -3,7 +3,7 @@
     We're still requesting the GeoTIFF for this scene for you.  Your
     browser will automatically be redirected to the GeoTIFF file when it
     is ready. <strong>If this takes longer than an hour, please contact
-    the Beachfront team for technical support.</strong>
+    the CoastLine team for technical support.</strong>
 </p>
 
 <p>
